KUBE/k8s-practice/ingress/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: httpd:2.4
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
            - |
              echo "<h1> Hello from app1</h1>" > /usr/local/apache2/htdocs/index.html
              httpd-foreground
