KUBE/k8s-practice/ingress/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: httpd:2.4
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
            - |
              echo "<h1>Hello from APP 2</h1>" > /usr/local/apache2/htdocs/index.html
              httpd-foreground
